--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,58 @@
-.box,
-.box-first,
-.box-large,
-.box-nested,
-.box-row {
-  position: relative;
-  overflow: hidden;
+body {
+  font-size: 20px;
+  line-height: 1.5em;
+}
+
+* {
   box-sizing: border-box;
-  margin-bottom: 0;
-  min-height: 1rem;
-  text-align: center;
-  color: #ffffff;
-  border: 1px solid #ffffff;
-  border-radius: 2px;
-  background: #007fff;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+button,
+input {
+  font-size: inherit;
+  line-height: inherit;
+}
+
+.clearfix::after {
+  display: block;
+  clear: both;
+  content: "";
+}
+
+.view-container {
+  position: relative;
+  margin: 60px 10%;
+  width: 80%;
+  max-width: 500px;
+}
+
+/* transition animations */
+/* ----------------------------------------------------------------------------------------------------- */
+
+.fade-enter {
+  transform: translate3d(100px, 0, 0);
+  opacity: 0.01;
+}
+
+.fade-enter-active {
+  transition: transform 500ms ease-in, opacity 500ms ease-in;
+  transform: translate3d(0, 0, 0);
+  opacity: 1;
+}
+
+.fade-exit {
+  position: absolute;
+  top: 0;
+  transform: translate3d(0, 0, 0);
+  opacity: 1;
+}
+
+.fade-exit-active {
+  transition: transform 500ms ease-in, opacity 500ms ease-in;
+  transform: translate3d(-100px, 0, 0);
+  opacity: 0.01;
 }
